# iris

./: CMakeLists.txt  README.md  TODO.md
common/: CMakeLists.txt  base_connection_handler.cc  base_connection_handler.h  base_connection_manager.cc  base_connection_manager.h  client_connection_handler.cc  client_connection_handler.h  client_connection_manager.cc  client_connection_manager.h  config.cc  config.h  connection_handler.cc  connection_handler.h  engine.cc  engine.h  event_handler.h  logging.cc  logging.h  server_connection_handler.cc  server_connection_handler.h  server_connection_manager.cc  server_connection_manager.h  stopwatch.cc  stopwatch.h  test_suite.h  types.cc  types.h
iris/: README.md
iris/client/: CMakeLists.txt  iris_client.cc  iris_client.h  main.cc
iris/server/: CMakeLists.txt  iris_server.cc  iris_server.h  main.cc
iris_chat/: CMakeLists.txt  README.md  iris_chat.cc  iris_chat.h  iris_chat_gui.cc  iris_chat_gui.h  main.cc
prisma/: README.md
prisma/consumer/: CMakeLists.txt  main.cc  prisma_consumer.cc  prisma_consumer.h
prisma/producer/: CMakeLists.txt  main.cc  prisma_producer.cc  prisma_producer.h
ray_tracer/: CMakeLists.txt  README.md  application.cc  application.h  config.h  debug_view.cc  debug_view.h  geometry.cc  geometry.h  main.cc  ray_tracer.cc  ray_tracer.h  scene.cc  scene.h  test.cc  todo.md  types.h  window.cc  window.h  window_config.h
ray_tracer/setup/: config.txt
src/: CMakeLists.txt  main.cc
src/client/: iris_client.cc  iris_client.h  main.cc
src/server/: CMakeLists.txt  iris_server.cc  iris_server.h  main.cc  types.h
